# sekey

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
assets/: sekey.entitlements
bundle/Applications/SeKey.app/Contents/: Info.plist
bundle/Applications/SeKey.app/Contents/Resources/: AppIcon.icns
bundle/SeKey.app/Contents/: Info.plist
install-scripts/: postinstall  preinstall
src/: ecdsa.rs  handler.rs  keychain.rs  lib.rs
